// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsS3StaticWebsiteServiceModule UT input changes should handle bucketName change 1`] = `
"+ service/main.tf
depends_on = [aws_s3_bucket_policy.bucket-changed-bucket_website_bucket_public_read_policy]
}

- service/main.tf
depends_on = [aws_s3_bucket_policy.bucket-test-bucket_website_bucket_public_read_policy]
}

+ service/main.tf
depends_on = [aws_s3_bucket_public_access_block.bucket-changed-bucket_website_bucket_public_access]
}

- service/main.tf
depends_on = [aws_s3_bucket_public_access_block.bucket-test-bucket_website_bucket_public_access]
}

+ service/main.tf
depends_on = [aws_s3_bucket_website_configuration.bucket-changed-bucket_website_bucket_config]
}

- service/main.tf
depends_on = [aws_s3_bucket_website_configuration.bucket-test-bucket_website_bucket_config]
}

+ service/main.tf
depends_on = [aws_s3_bucket.bucket-changed-bucket_website_bucket]
}

- service/main.tf
depends_on = [aws_s3_bucket.bucket-test-bucket_website_bucket]
}

+ service/main.tf
depends_on = [aws_s3_object.bucket-changed-bucket_file_errorhtml]
}

+ service/main.tf
depends_on = [aws_s3_object.bucket-changed-bucket_file_indexhtml]
}

- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_errorhtml]
}

- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_indexhtml]
}

+ service/main.tf
resource "aws_s3_bucket_policy" "bucket-changed-bucket_website_bucket_public_read_policy" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  policy = jsonencode({
    Statement = [{
        Action = ["s3:GetObject"]
        Effect = "Allow"
        Principal = "*"
        Resource = ["\${aws_s3_bucket.bucket-changed-bucket_website_bucket.arn}/*"]
        Sid = "PublicReadGetObject"
      }]
    Version = "2012-10-17"
  })

- service/main.tf
resource "aws_s3_bucket_policy" "bucket-test-bucket_website_bucket_public_read_policy" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  policy = jsonencode({
    Statement = [{
        Action = ["s3:GetObject"]
        Effect = "Allow"
        Principal = "*"
        Resource = ["\${aws_s3_bucket.bucket-test-bucket_website_bucket.arn}/*"]
        Sid = "PublicReadGetObject"
      }]
    Version = "2012-10-17"
  })

+ service/main.tf
resource "aws_s3_bucket_public_access_block" "bucket-changed-bucket_website_bucket_public_access" {
  provider = aws._123-us-east-1
  block_public_acls = false
  block_public_policy = false
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  ignore_public_acls = false
  restrict_public_buckets = false

- service/main.tf
resource "aws_s3_bucket_public_access_block" "bucket-test-bucket_website_bucket_public_access" {
  provider = aws._123-us-east-1
  block_public_acls = false
  block_public_policy = false
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  ignore_public_acls = false
  restrict_public_buckets = false

+ service/main.tf
resource "aws_s3_bucket_website_configuration" "bucket-changed-bucket_website_bucket_config" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  error_document {
    key = "error.html"
  }
  index_document {
    suffix = "index.html"
  }

- service/main.tf
resource "aws_s3_bucket_website_configuration" "bucket-test-bucket_website_bucket_config" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  error_document {
    key = "error.html"
  }
  index_document {
    suffix = "index.html"
  }

+ service/main.tf
resource "aws_s3_bucket" "bucket-changed-bucket_website_bucket" {
  provider = aws._123-us-east-1
  bucket = "changed-bucket"
}

- service/main.tf
resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

+ service/main.tf
resource "aws_s3_object" "bucket-changed-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

+ service/main.tf
resource "aws_s3_object" "bucket-changed-bucket_file_indexhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/index.html")
  key = "index.html"
  source = "resources/s3-static-website/index.html"

+ service/main.tf
resource "aws_s3_object" "bucket-changed-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-changed-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_indexhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/index.html")
  key = "index.html"
  source = "resources/s3-static-website/index.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html"

+ service/outputs.tf
output "bucket-changed-bucket-Arn" {
  value = aws_s3_bucket.bucket-changed-bucket_website_bucket.arn
}

+ service/outputs.tf
output "bucket-changed-bucket-awsRegionId" {
  value = "us-east-1"
}

- service/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket_website_bucket.arn
}

- service/outputs.tf
output "bucket-test-bucket-awsRegionId" {
  value = "us-east-1"
}"
`;

exports[`AwsS3StaticWebsiteServiceModule UT input changes should handle directoryPath change 1`] = `
"- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_errorhtml]
}

- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_indexhtml]
}

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html""
`;

exports[`AwsS3StaticWebsiteServiceModule UT should CUD 2`] = `"<no changes>"`;

exports[`AwsS3StaticWebsiteServiceModule UT should CUD 4`] = `
"- service/main.tf
depends_on = [aws_s3_bucket_policy.bucket-test-bucket_website_bucket_public_read_policy]
}

- service/main.tf
depends_on = [aws_s3_bucket_public_access_block.bucket-test-bucket_website_bucket_public_access]
}

- service/main.tf
depends_on = [aws_s3_bucket_website_configuration.bucket-test-bucket_website_bucket_config]
}

- service/main.tf
depends_on = [aws_s3_bucket.bucket-test-bucket_website_bucket]
}

- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_errorhtml]
}

- service/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_indexhtml]
}

- service/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service/main.tf
resource "aws_s3_bucket_policy" "bucket-test-bucket_website_bucket_public_read_policy" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  policy = jsonencode({
    Statement = [{
        Action = ["s3:GetObject"]
        Effect = "Allow"
        Principal = "*"
        Resource = ["\${aws_s3_bucket.bucket-test-bucket_website_bucket.arn}/*"]
        Sid = "PublicReadGetObject"
      }]
    Version = "2012-10-17"
  })

- service/main.tf
resource "aws_s3_bucket_public_access_block" "bucket-test-bucket_website_bucket_public_access" {
  provider = aws._123-us-east-1
  block_public_acls = false
  block_public_policy = false
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  ignore_public_acls = false
  restrict_public_buckets = false

- service/main.tf
resource "aws_s3_bucket_website_configuration" "bucket-test-bucket_website_bucket_config" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  error_document {
    key = "error.html"
  }
  index_document {
    suffix = "index.html"
  }

- service/main.tf
resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_indexhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/index.html")
  key = "index.html"
  source = "resources/s3-static-website/index.html"

- service/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html"

- service/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket_website_bucket.arn
}

- service/outputs.tf
output "bucket-test-bucket-awsRegionId" {
  value = "us-east-1"
}

- service/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service/variables.tf
<empty>"
`;

exports[`AwsS3StaticWebsiteServiceModule UT should CUD tags 2`] = `
"~ service/main.tf resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsS3StaticWebsiteServiceModule UT should CUD tags 4`] = `
"~ service/main.tf resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
@@ -3,6 +3,2 @@
    bucket = "test-bucket"
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsS3StaticWebsiteServiceModule UT should handle moduleId change 1`] = `
"- service-1/main.tf
depends_on = [aws_s3_bucket_policy.bucket-test-bucket_website_bucket_public_read_policy]
}

- service-1/main.tf
depends_on = [aws_s3_bucket_public_access_block.bucket-test-bucket_website_bucket_public_access]
}

- service-1/main.tf
depends_on = [aws_s3_bucket_website_configuration.bucket-test-bucket_website_bucket_config]
}

- service-1/main.tf
depends_on = [aws_s3_bucket.bucket-test-bucket_website_bucket]
}

- service-1/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_errorhtml]
}

- service-1/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_indexhtml]
}

- service-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service-1/main.tf
resource "aws_s3_bucket_policy" "bucket-test-bucket_website_bucket_public_read_policy" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  policy = jsonencode({
    Statement = [{
        Action = ["s3:GetObject"]
        Effect = "Allow"
        Principal = "*"
        Resource = ["\${aws_s3_bucket.bucket-test-bucket_website_bucket.arn}/*"]
        Sid = "PublicReadGetObject"
      }]
    Version = "2012-10-17"
  })

- service-1/main.tf
resource "aws_s3_bucket_public_access_block" "bucket-test-bucket_website_bucket_public_access" {
  provider = aws._123-us-east-1
  block_public_acls = false
  block_public_policy = false
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  ignore_public_acls = false
  restrict_public_buckets = false

- service-1/main.tf
resource "aws_s3_bucket_website_configuration" "bucket-test-bucket_website_bucket_config" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  error_document {
    key = "error.html"
  }
  index_document {
    suffix = "index.html"
  }

- service-1/main.tf
resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

- service-1/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

- service-1/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_indexhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/index.html")
  key = "index.html"
  source = "resources/s3-static-website/index.html"

- service-1/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html"

- service-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service-1/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket_website_bucket.arn
}

- service-1/outputs.tf
output "bucket-test-bucket-awsRegionId" {
  value = "us-east-1"
}

- service-1/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service-1/variables.tf
<empty>

+ service-2/main.tf
depends_on = [aws_s3_bucket_policy.bucket-test-bucket_website_bucket_public_read_policy]
}

+ service-2/main.tf
depends_on = [aws_s3_bucket_public_access_block.bucket-test-bucket_website_bucket_public_access]
}

+ service-2/main.tf
depends_on = [aws_s3_bucket_website_configuration.bucket-test-bucket_website_bucket_config]
}

+ service-2/main.tf
depends_on = [aws_s3_bucket.bucket-test-bucket_website_bucket]
}

+ service-2/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_errorhtml]
}

+ service-2/main.tf
depends_on = [aws_s3_object.bucket-test-bucket_file_indexhtml]
}

+ service-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ service-2/main.tf
resource "aws_s3_bucket_policy" "bucket-test-bucket_website_bucket_public_read_policy" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  policy = jsonencode({
    Statement = [{
        Action = ["s3:GetObject"]
        Effect = "Allow"
        Principal = "*"
        Resource = ["\${aws_s3_bucket.bucket-test-bucket_website_bucket.arn}/*"]
        Sid = "PublicReadGetObject"
      }]
    Version = "2012-10-17"
  })

+ service-2/main.tf
resource "aws_s3_bucket_public_access_block" "bucket-test-bucket_website_bucket_public_access" {
  provider = aws._123-us-east-1
  block_public_acls = false
  block_public_policy = false
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  ignore_public_acls = false
  restrict_public_buckets = false

+ service-2/main.tf
resource "aws_s3_bucket_website_configuration" "bucket-test-bucket_website_bucket_config" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  error_document {
    key = "error.html"
  }
  index_document {
    suffix = "index.html"
  }

+ service-2/main.tf
resource "aws_s3_bucket" "bucket-test-bucket_website_bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

+ service-2/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_errorhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/error.html")
  key = "error.html"
  source = "resources/s3-static-website/error.html"

+ service-2/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_indexhtml" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/index.html")
  key = "index.html"
  source = "resources/s3-static-website/index.html"

+ service-2/main.tf
resource "aws_s3_object" "bucket-test-bucket_file_page1html" {
  provider = aws._123-us-east-1
  bucket = aws_s3_bucket.bucket-test-bucket_website_bucket.id
  content_type = "text/html"
  etag = filemd5("resources/s3-static-website/page-1.html")
  key = "page-1.html"
  source = "resources/s3-static-website/page-1.html"

+ service-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ service-2/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket_website_bucket.arn
}

+ service-2/outputs.tf
output "bucket-test-bucket-awsRegionId" {
  value = "us-east-1"
}

+ service-2/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

+ service-2/variables.tf
<empty>"
`;
